# quickbooks-online-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/rules/: mcp-tool-decorators.md  test-bdd-structure.md
.github/workflows/: ci.yml  docker-image.yml  tests.yml
docs/: connect.html  disconnect.html  eula.html  index.html  privacy.html
scripts/: bootstrap_oauth.py  bootstrap_oauth_prod.sh  smoke_test.py  start_server.sh
src/qbo_mcp/: config.py  qbo_client.py  server.py  service.py  shared.py  token_store.py
src/qbo_mcp/customers/: service.py  tools.py
src/qbo_mcp/invoices/: service.py  tools.py
src/qbo_mcp/items/: service.py  tools.py
src/qbo_mcp/tools/: customers.py  invoices.py  items.py  shared.py
tests/: conftest.py  test_qbo_client.py  test_server.py  test_service.py  test_validation.py
tests/customers/: test_service.py  test_tool.py
tests/invoices/: test_service.py  test_tool.py
tests/items/: test_service.py  test_tool.py
