[project]
name = "quickbooks-online-mcp"
version = "0.1.0"
description = "QuickBooks Online MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qbo_mcp"]

# Ship the connector logo so importlib.resources finds it at runtime, regardless of
# VCS tracking state (server.py reads qbo_mcp/assets/icon.png at import).
[tool.hatch.build.targets.wheel.force-include]
"src/qbo_mcp/assets/icon.png" = "qbo_mcp/assets/icon.png"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
